# ETL

./: build_docs.sh  dune-project  etl-environment.opam  etl.opam  readme.md
.github/workflows/: docs.yaml
data/: result.csv  result.db  results.db  ym_result.db
docs/: index.html
docs/etl/: index.html
docs/etl/Etl/: index.html
docs/etl/Etl/Helpers/: index.html
docs/etl/Etl/Parsers/: index.html
docs/etl/Etl/Transform/: index.html
docs/etl/Etl/Transform/IntMap/: index.html
docs/etl/Etl/Transform/StringMap/: index.html
docs/etl/Etl/Types/: index.html
lib/: dune  helpers.ml  impure.ml  item.ml  parsers.ml  pure.ml  transform.ml  types.ml
test/: dune  test_parsers.ml  test_transform.ml
