opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-domains.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "ocaml.5.2.0"
  "ocaml-base-compiler.5.2.0"
  "ocaml-config.3"
  "ocaml-options-vanilla.1"
]
roots: [
  "cohttp-lwt-unix.6.1.0"
  "csv.2.4"
  "dune.3.17.2"
  "lwt.5.9.1"
  "ocaml.5.2.0"
  "ocaml-base-compiler.5.2.0"
  "ocaml-lsp-server.1.21.0"
  "tls-lwt.2.0.0"
]
installed: [
  "angstrom.0.16.1"
  "asn1-combinators.0.3.2"
  "astring.0.8.5"
  "base.v0.17.1"
  "base-bigarray.base"
  "base-bytes.base"
  "base-domains.base"
  "base-nnp.base"
  "base-threads.base"
  "base-unix.base"
  "base64.3.5.1"
  "bigarray-compat.1.1.0"
  "bigstringaf.0.8.0"
  "bos.0.2.1"
  "ca-certs.1.0.0"
  "camlp-streams.5.0.1"
  "chrome-trace.3.17.2"
  "cmdliner.1.3.0"
  "cohttp.6.1.0"
  "cohttp-lwt.6.1.0"
  "cohttp-lwt-unix.6.1.0"
  "conduit.8.0.0"
  "conduit-lwt.8.0.0"
  "conduit-lwt-unix.8.0.0"
  "conf-gmp.4"
  "conf-gmp-powm-sec.3"
  "conf-pkg-config.4"
  "conf-sqlite3.1"
  "cppo.1.8.0"
  "cpuid.0.1.2"
  "csexp.1.5.2"
  "cstruct.6.0.1"
  "csv.2.4"
  "digestif.1.2.0"
  "domain-name.0.4.0"
  "dot-merlin-reader.5.3-502"
  "dune.3.17.2"
  "dune-build-info.2.9.3"
  "dune-configurator.3.17.2"
  "dune-rpc.3.17.2"
  "duration.0.2.1"
  "dyn.3.17.2"
  "eqaf.0.9"
  "fiber.3.7.0"
  "fieldslib.v0.17.0"
  "fmt.0.10.0"
  "fpath.0.7.3"
  "gmap.0.3.0"
  "http.6.1.0"
  "ipaddr.5.6.0"
  "ipaddr-sexp.5.6.0"
  "jsonm.1.0.2"
  "jsonrpc.1.21.0"
  "kdf.1.0.0"
  "logs.0.7.0"
  "lsp.1.21.0"
  "lwt.5.9.1"
  "lwt_ppx.5.9.1"
  "macaddr.5.6.0"
  "magic-mime.1.3.1"
  "merlin-lib.5.3-502"
  "mirage-crypto.2.0.0"
  "mirage-crypto-ec.2.0.0"
  "mirage-crypto-pk.2.0.0"
  "mirage-crypto-rng.2.0.0"
  "mirage-no-solo5.1"
  "mirage-no-xen.1"
  "mmap.1.2.0"
  "mtime.1.3.0"
  "num.1.5-1"
  "ocaml.5.2.0"
  "ocaml-base-compiler.5.2.0"
  "ocaml-compiler-libs.v0.17.0"
  "ocaml-config.3"
  "ocaml-lsp-server.1.21.0"
  "ocaml-options-vanilla.1"
  "ocaml-secondary-compiler.4.14.2"
  "ocaml-syntax-shims.1.0.0"
  "ocaml_intrinsics_kernel.v0.17.1"
  "ocamlbuild.0.14.3"
  "ocamlc-loc.3.17.2"
  "ocamlfind.1.9.6"
  "ocamlfind-secondary.1.9.6"
  "ocamlformat-rpc-lib.0.27.0"
  "ocplib-endian.1.2"
  "ohex.0.2.0"
  "ordering.3.17.2"
  "parsexp.v0.17.0"
  "pp.2.0.0"
  "ppx_derivers.1.2.1"
  "ppx_fields_conv.v0.17.0"
  "ppx_sexp_conv.v0.17.0"
  "ppx_yojson_conv_lib.v0.15.0"
  "ppxlib.0.35.0"
  "ppxlib_jane.v0.17.0"
  "ptime.1.2.0"
  "re.1.11.0"
  "result.1.5"
  "rresult.0.7.0"
  "seq.base"
  "sexplib.v0.17.0"
  "sexplib0.v0.17.0"
  "spawn.v0.17.0"
  "sqlite3.5.0.2"
  "stdio.v0.17.0"
  "stdlib-shims.0.3.0"
  "stdune.3.17.2"
  "stringext.1.6.0"
  "tls.2.0.0"
  "tls-lwt.2.0.0"
  "topkg.1.0.7"
  "uri.4.4.0"
  "uri-sexp.4.4.0"
  "uutf.1.0.3"
  "x509.1.0.5"
  "xdg.3.17.2"
  "yojson.2.2.2"
  "zarith.1.14"
]
